<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Twittur(In)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temporary_info">notification page, consist all possible notifications coming from our official server!</string>
    <string name="test_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="full_name">Full name</string>
    <string name="registration">Registration</string>
    <string name="subject">Subject</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="major">Major</string>
    <string name="student_id">Student ID</string>
    <string name="username">Username</string>
    <string name="kind">kind</string>
    <string name="following_counter_tv" translatable="false">123</string>
    <string name="following">Following</string>
    <string name="followers_counter_tv" translatable="false">88</string>
    <string name="followers">Followers</string>
    <string name="profile_page">Profile Page</string>
    <string name="birthday">Birthday</string>
    <string name="save">Save</string>
    <string name="biography">Biography</string>
    <string name="country">Country</string>
    <string name="location">Location</string>
    <string name="wanna_register">Want to register?</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="follow">Follow</string>
    <string name="post">Post</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="likes_like"><![CDATA[Likes <<Like>>]]></string>
    <string name="readers">Readers</string>
    <string name="unfollow">Unfollow</string>
    <string name="report_post">Report a post</string>
    <string name="report">Report</string>
    <string name="scam_desc">Financial scams, posting malicious links, misusing hashtags, fake engagement, repetitive replies, Retweets, or Direct Messages</string>
    <string name="privacy_desc">Sharing private information, threatening to share/expose private information, sharing non-consensual intimate images, sharing images of me that I don’t want on the platform</string>
    <string name="privacy">Privacy</string>
    <string name="spam">Spam</string>
    <string name="abuse_and_harassment"><![CDATA[Abuse & Harassment]]></string>
    <string name="abuse_and_harassment_desc">Harassment, objectionable sexual content and graphic objectification, objectionable NSFW and graphic content, denial of violent events, targeted stalking and incitement to stalking</string>
    <string name="report_expl_desc">If your complaint is reasonable, we will definitely inform you about it and take action!</string>
    <string name="report_desc_tv">Please describe why you want to report this tweet</string>
    <string name="next">Next</string>
    <string name="profile">Profile</string>
    <string name="in_progress" tools:ignore="PrivateResource">In Progress</string>
    <string name="language">Language</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="time_table">Timetable</string>
    <string name="my_posts">My Posts</string>
    <string name="choose_language">Choose language</string>
    <string name="cancel">Cancel</string>
    <string name="publish">Publish</string>
    <string name="publication_context">What\'s going on ?</string>
    <string name="tweets">Tweets</string>
    <string name="likes">Likes</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleted">Deleted</string>
    <string name="delete_tweet_title">Are you sure you want to delete this tweet?</string>
    <string name="delete_tweet_message">Note that all tweet activities such as replies, likes and shares will be deleted also!</string>
    <string name="delete_account_title">Are you sure you want to delete account?</string>
    <string name="delete_account_message">Please note that once an account is deleted, it cannot be restored and all activity will be deleted</string>
    <string name="get_color">Choose a color</string>
    <string name="student">Student</string>
    <string name="professor">Professor</string>
    <string name="kind_picker_tv">What kind are you?</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="deleting_account_activity_context">Note: When you delete your account all activities such as: likes, replies, comments, chats, tweets will be also deleted, without the possibility of restoring them! \n</string>
    <string name="deleting_account_password_input_context">Please enter your email so we can send you confirmation code to your email!</string>
    <string name="delete">Delete</string>
    <string name="reply">Reply…</string>
    <string name="createdat">createdAt</string>
    <string name="updatedat">updatedAt</string>
    <string name="integer_string" translatable="false">999</string>
    <string name="post_description">Post description will be shown here!</string>
    <string name="profile_page_tweet_info">You Don\'t Have Tweets</string>
    <string name="page_not_available">The page is not available due to technical work.</string>
    <string name="page_unavailable">This Page Currently Unavailable!</string>
    <string name="profile_page_liked_tweets">You Don\'t Have Liked Tweets</string>
    <string name="user_following_information">You are not following anyone</string>
    <string name="user_does_not_have_subscribers">You have no subscribers!</string>
    <string name="update_post">Update Post</string>
    <string name="fragment">fragment</string>
    <string name="code">Code</string>
    <string name="delete_post">Delete post</string>
    <string name="edit_post">Edit post</string>
    <string name="choose_picture">choose picture</string>
    <string name="change_theme">Change Mode</string>
    <string name="back">back</string>
    <string name="groups">Groups</string>
    <string name="chat">Chat</string>
    <string name="stayIn_title_message">We will save your username login information so that you do not have to enter it each time you log in again.</string>
    <string name="divider">divider</string>
    <string name="save_login_details">Save login details?</string>
    <string name="not_now">Not now</string>
    <string name="microphone">Microphone</string>
    <string name="internet_status_description">It seems there is something wrong with your internet connection. Please connect to the internet and try again.</string>
    <string name="ooops" translatable="false">Ooops!</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="retry">Retry</string>
    <string name="no_spaces_allowed">No spaces allowed</string>
    <string name="login">Login</string>
    <string name="there_is_no_any_conversations">There is no any conversations</string>
    <string name="there_is_no_any_group_conversations">There is no any group conversations</string>
    <string name="Home">Home</string>
    <string name="Search">Search</string>
    <string name="invalid_date">Invalid date</string>
    <string name="gratitude">Thank you for leaving report. We will definitely take into account your report</string>
    <string name="feedback">Feedback</string>
    <string name="set_off">Set off!</string>
    <string name="detail_page_reply_btn_content_description">in detail page send to reply button.</string>
    <string name="email_topic">The reason for petition (optional)?</string>
    <string name="feedback_page_back_button">feedback page back button</string>
    <string name="profile_page_back_button">profile page back button</string>
    <string name="other">Other</string>
    <string name="policy_agree_btn">I accept the Terms of Service</string>
    <string name="detail_page_bottom_sheet">This is detail page bottom sheet</string>
    <string name="italiano" translatable="false">Italiano</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="english" translatable="false">English</string>
    <string name="o_zbek" translatable="false">O\'zbek</string>
    <string name="default_user_fullname" translatable="false">Twittur User</string>
    <string name="empty_bio">This user does not appear to have any biography.</string>
    <string name="loading">Loading...</string>
    <string name="short_label">Create a post</string>
    <string name="long_label">Create a post long label</string>
    <string name="disabled_message">create a post disable label</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="success">Success</string>
    <string name="info">Your email will not be displayed due to tech. works on server side. After fixing issue, we will add visibility to your email.</string>
    <string name="dot_splitter" translatable="false">•</string>
    <string name="developing">Developing...</string>
    <string name="failed_to_pick_media">"Failed to pick media from Gallery. "</string>
    <string name="copy_link">Copy link</string>
    <string name="share_link">Share link</string>
    <string name="notification_message">Notification permission is required, Please allow notification permission from setting</string>
    <string name="notification_title">Notification Permission</string>
    <string name="notification_require_message">Notification permission is required, to show notification</string>
    <string name="alert">Alert</string>
    <string name="download">Download</string>
    <string name="empty_body">Empty patch notes...</string>

    <string-array name="major_array">
        <item>SE</item>
        <item>BM</item>
        <item>IT</item>
        <item>ME</item>
        <item>CIE</item>
        <item>AD</item>
        <item>AE</item>
    </string-array>

    <string-array name="feedback_array">
        <item>Find a bug!</item>
        <item>Function does not work properly!</item>
        <item>I cannot finish navigation!</item>
        <item>I cannot delete my account! </item>
        <item>Other</item>
    </string-array>

</resources>