<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        tools:ignore="MenuTitle"
        android:title="@string/Home"
        android:icon="@drawable/home_selector"/>

    <item
        android:id="@+id/searchFragment"
        tools:ignore="MenuTitle"
        android:title="@string/search_hint"
        android:icon="@drawable/search"/>

    <item
        android:id="@+id/notificationsFragment"
        tools:ignore="MenuTitle"
        android:title="@string/notifications"
        android:icon="@drawable/notification_selector"/>

    <item
        android:id="@+id/privateMessagesFragment"
        tools:ignore="MenuTitle"
        android:title="@string/messages"
        android:icon="@drawable/mail_selector"/>

</menu>