<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ReportActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/back_report_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/keyboard_backspace"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/report_desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_desc_tv"
        android:textStyle="bold"
        android:textSize="26sp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <TextView
        android:id="@+id/report_expl_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_expl_desc"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_desc_tv"/>

    <LinearLayout
        android:id="@+id/list_of_reports_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_expl_tv">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent"
            android:layout_marginHorizontal="16dp">

            <RadioButton
                android:id="@+id/radio_spam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spam"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scam_desc"
                android:textAlignment="textStart"/>

            <RadioButton
                android:id="@+id/radio_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_desc"/>

            <RadioButton
                android:id="@+id/radio_abuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abuse_and_harassment"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abuse_and_harassment_desc"/>

        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>