<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".tweet.presentation.report.ReportFragment">

    <!--  Toolbar  -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/report_page_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:navigationIcon="@drawable/keyboard_backspace"
        app:titleTextAppearance="?attr/textAppearanceTitleLarge"/>

    <TextView
        android:id="@+id/report_desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_desc_tv"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        app:layout_constraintTop_toBottomOf="@id/report_page_toolbar"/>

    <TextView
        android:id="@+id/report_expl_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_expl_desc"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintTop_toBottomOf="@+id/report_desc_tv"/>

    <LinearLayout
        android:id="@+id/list_of_reports_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_expl_tv">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent"
            android:layout_marginHorizontal="16dp">

            <!--      SPAM      -->
            <RadioButton
                android:id="@+id/radio_spam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spam"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/scam_desc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scam_desc"
                android:textAlignment="textStart"
                android:textAppearance="?attr/textAppearanceBodySmall"/>

            <!--      PRIVACY      -->
            <RadioButton
                android:id="@+id/radio_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/privacy_desc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_desc"
                android:textAppearance="?attr/textAppearanceBodySmall"/>

            <!--      ABUSE      -->
            <RadioButton
                android:id="@+id/radio_abuse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/abuse_and_harassment"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/abuse_and_harassment_desc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abuse_and_harassment_desc"
                android:textAppearance="?attr/textAppearanceBodySmall"/>

            <RadioButton
                android:id="@+id/radio_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/describe_report_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Describe issue..."
                android:visibility="invisible"
                android:textAppearance="?attr/textAppearanceBodySmall"/>

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/report_next_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/next"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>