<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/home_root_layout"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">

<!--    Round this image    -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/search_user_avatar"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/search_full_name_tv"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/full_name"
            android:layout_marginTop="15dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/search_user_avatar"/>

        <TextView
            android:id="@+id/search_username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/search_full_name_tv"
            app:layout_constraintStart_toEndOf="@id/search_user_avatar"/>

        <Button
            android:id="@+id/search_follow_btn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/follow"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/search_post_description_tv"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/post_description"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:maxLines="2"
            android:textSize="12sp"
            android:ellipsize="end"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toEndOf="@id/search_user_avatar"
            app:layout_constraintTop_toBottomOf="@id/search_username_tv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>