<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/following_rc_root_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

<!--    Round this image    -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_following_avatar"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            tools:ignore="ContentDescription"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/full_name_following_tv"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="18sp"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginTop="24dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_following_avatar"/>

        <TextView
            android:id="@+id/username_following_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/full_name_following_tv"
            app:layout_constraintStart_toEndOf="@id/user_following_avatar"/>

        <Button
            android:id="@+id/unfollow_btn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/unfollow"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/user_following_post_description"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/post_description"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:maxLines="2"
            android:textSize="12sp"
            android:ellipsize="end"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintStart_toEndOf="@id/user_following_avatar"
            app:layout_constraintTop_toBottomOf="@id/username_following_tv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>